[package]
name = "recrash"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1", features = [ "dynamic_linking", "wayland" ] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

# Linux-only!
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

