[package]
name = "recrash"
version = "0.1.0"
edition = "2021"

[lib]
name = "librecrash"
path = "src/lib.rs"

[[bin]]
name = "recrash"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.15.1", features = [ "dynamic_linking", "wayland" ] }
marching-cubes = "0.1.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.rust-analyzer]
inherits = "dev"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
